--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       </nav>
 
       <div class="gothic-a1-bold text-title">[ MA - DESIGN ]</div>
+      <div class="gothic-a1-bold text-title-mobile">[ MA - <br />DESIGN ]</div>
 
       <div class="bottom-container">
         <div class="bottom-elements">
