Update hedeko.html btn

--- a/hedeko.html
+++ b/hedeko.html
@@ -84,7 +84,7 @@
               website that aligned with their vision of creating sustainable
               software.
             </p>
-            <a href="https://www.hedeko.si/" class="ps-4 pe-4 p-2 main-button"> View Live </a>
+            <a href="https://www.hedeko.si/" class="btn ps-4 pe-4 p-2 main-button"> View Live </a>
           </div>
           <div class="col-md-3"></div>
         </div>
