--- a/art.html
+++ b/art.html
@@ -68,18 +68,17 @@
         </div>
       </nav>
 
-      <div class="project-h">Vector illustrations</div>
+      <div class="project-h">ART</div>
       <section class="container pb-5">
         <div class="row mb-5">
           <div class="col-md-3"></div>
           <div class="col-md-6 text-center">
             <p class="f-w-600">
-              [Vector illustrations - Brand Identity - UI / UX Design -
-              Developement ]
+              [ Game UI Art - low poly 3D ]
             </p>
 
             <p class="pt-1 pb-5 f-s-17">
-              A collection of some of my other work.
+              A collection of artwork.
             </p>
           </div>
           <div class="col-md-3"></div>
@@ -96,10 +95,9 @@
 
     <section class="mt-5 p-bot-break text-center">
       <div class="container">
-        <img src="assets/random/pcs.png" class="img-fluid-70" />
-        <img src="assets/random/pcs-2.png" class="img-fluid-70 mt-5" />
-        <img src="assets/random/ekodevs.png" class="img-fluid mt-5" />
-        <img src="assets/random/process.png" class="img-fluid-70 mt-5" />
+        <img src="assets/froggy.png" class="img-fluid mt-5" />
+        <img src="assets/jungle-run.png" class="img-fluid mt-5" />
+        <img src="assets/art.png" class="img-fluid mt-5" />
       </div>
     </section>
 
