--- a/index.html
+++ b/index.html
@@ -143,6 +143,24 @@
         </div>
       </div>
       <div class="container proj-text p-5">
+         <div id="d-01" class="row n-bor t-bor">
+          <div class="flex-j-s">
+            <div class="p-4">//00</div>
+            <div class="p-4">My Art</div>
+            <img
+              class="d-01-i"
+              src="assets/froggy.png"
+              width="200"
+              alt=""
+            />
+            <div class="p-4">
+              <a class="a-proj" href="graphics.html">
+                View
+                <img src="assets/icons/Arrow-28.svg" alt="" />
+              </a>
+            </div>
+          </div>
+        </div>
         <div id="d-01" class="row n-bor t-bor">
           <div class="flex-j-s">
             <div class="p-4">//01</div>
