--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div>
           </div>
         </div>
-        <div id="d-01" class="row n-bor t-bor">
+        <div id="d-01" class="row n-bor">
           <div class="flex-j-s">
             <div class="p-4">//01</div>
             <div class="p-4">Graphics</div>
