--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="p-4">My Art</div>
             <img
               class="d-01-i"
-              src="assets/froggy.png"
+              src="assets/art-prev.png"
               width="200"
               alt=""
             />
