--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               alt=""
             />
             <div class="p-4">
-              <a class="a-proj" href="graphics.html">
+              <a class="a-proj" href="art.html">
                 View
                 <img src="assets/icons/Arrow-28.svg" alt="" />
               </a>
