--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
          <div id="d-01" class="row n-bor t-bor">
           <div class="flex-j-s">
             <div class="p-4">//00</div>
-            <div class="p-4">My Art</div>
+            <div class="p-4"> Game UI & Digital art </div>
             <img
               class="d-01-i"
               src="assets/art-prev.png"
