--- a/art.html
+++ b/art.html
@@ -96,6 +96,7 @@
     <section class="mt-5 p-bot-break text-center">
       <div class="container">
         <img src="assets/froggy.png" class="img-fluid mt-5" />
+        <img src="assets/action.png" class="img-fluid-70" />
         <img src="assets/jungle-run.png" class="img-fluid mt-5" />
         <img src="assets/art.png" class="img-fluid mt-5" />
       </div>
